# PlatformDataEngine

./: .gitignore  CMakeLists.txt  Doxyfile  PlatformDataEngine.sln  README.md  vcpkg.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: msbuild.yml
PlatformDataEngine/: Alive.cpp  Alive.h  AnimationController.cpp  AnimationController.h  AudioSystem.cpp  AudioSystem.h  Bullet.cpp  Bullet.h  CameraController.cpp  CameraController.h  CharacterController.cpp  CharacterController.h  Client.cpp  Client.h  Component.cpp  Component.h  ComponentFactory.h  DamageHandler.cpp  DamageHandler.h  DeathHandler.cpp  EngineStatsText.cpp  EngineStatsText.h  FloatingBox.cpp  FloatingBox.h  GameObject.cpp  GameObject.h  GameScene.h  GameWorld.cpp  GameWorld.h  GlobalEffects.cpp  GlobalEffects.h  Globals.cpp  Globals.h  InputManager.h  Menu.cpp  Menu.h  Message.h  MessageTypes.h  MiniGun.h  Minigun.cpp  (+68 more)
PlatformDataEngine/assets/: Arena.tmx  Arena2.tmx  Character.json  Character.tsx  Explosion.json  FireParticle.json  Main.tmx  Menu.tmx  MiniGun.json  Props.json  Props.tsx  RocketLauncher.json  SpaceTilesetOvergrown.tsx  Spike.tsx  StatsPanel.json  desktop.ini  floatingbox.json  galaxy.tsx  moon.tsx  springstar_fields.tsx
PlatformDataEngine/game/: input.json  network.json  world.json
PlatformDataEngine/shaders/: foliage.frag  foliage.vert  text.frag  text.vert
docs/html/: _alive_8h_source.html  _animation_controller_8h_source.html  _audio_system_8h_source.html  _bullet_8h_source.html  _camera_controller_8h_source.html  _character_controller_8h_source.html  _client_8h_source.html  _component_8h_source.html  _component_factory_8h_source.html  _damage_handler_8h_source.html  _engine_stats_text_8h_source.html  _game_object_8h_source.html  _game_scene_8h_source.html  _game_world_8h_source.html  _global_effects_8h_source.html  _globals_8h_source.html  _input_manager_8h_source.html  _menu_8h_source.html  _message_8h_source.html  _message_types_8h_source.html  _mini_gun_8h_source.html  _network_handler_8h_source.html  _network_input_manager_8h_source.html  _networkable_8h_source.html  _packet_8h_source.html  (+231 more)
(+150 files in other folders)
